@@ -1,0 +1,3 @@
+TARGET = messagecarbons 
+include(messagecarbons.pri) 
+include(../plugins.inc) 
